2016-11-02  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/plots/colors.py:

	Do not include timestamps in cpt and txt files.

	Use blanks instead of "/" in cpt files.

	* typhon/plots/tests/reference/viridis.cpt,
	* typhon/plots/tests/reference/viridis.txt:

	Updated reference files to new formats.

	* typhon/plots/tests/test_colors.py:

	Use a simple file comparison for export tests.

2016-11-02  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/plots/colors.py:

	Added a function to export colormaps as Adobe Color Table.

	* typhon/plots/tests/test_colors.py: Test export to Adobe Color Table.

	* typhon/plots/tests/reference/viridis.act: Reference file.

2016-11-02  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/plots/colors.py:

	Pass the number of colors when creating the LinearSegmentedColormap.

2016-11-02  Oliver Lemke  <olemke@core-dump.info>

	* typhon/plots/colors.py (cmap_from_act):

	Respect the number of colors defined in the file.

2016-11-02  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/plots/colors.py: Added function to import Adobe Color Tables.

2016-11-01  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/plots/plots.py (heatmap):

	Made possible types for `bins` consistent with plt.hist2d().

2016-11-01  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/latex.py: Added a keyword to pass a label to the LaTeX table.

	* typhon/tests/reference/matrix.tex: Updated reference file.

2016-11-01  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/plots/plots.py:

	Added a function to create a simple heatmap.

2016-10-31  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/physics/units/em.py:

	(SRF.blackbody_radiance) (SRF.integrate_radiances):

	- Make internal handling more consistent with correct units.  Now
	supports returning either radiance or spectral radiance.

	* typhon/datasets/tovs.py:

	(HIRS._read):

	- Add some checks on latitude and longitude ranges.  Those should not
	be too large but also not too small.
